[tool.poetry]
name = "odyssey-version"
version = "1.0.0"
description = "Handles version compatibility between PEP440 and SemVer 2.0"
authors = ["Justin Sharma <justin.elite@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "odyssey_version"}]

[tool.poetry.dependencies]
python = "^3.10"
semantic-version = "2.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
