[tool.poetry]
name = "odyssey-version"
version = "1.0.0"
description = "Handles version compatibility between PEP440 and SemVer 2.0"
authors = ["Justin Sharma <justin.elite@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "odyssey_version"}]

[tool.poetry.dependencies]
python = "^3.10"
semantic-version = "2.10.0"
packaging = "21.3"

[tool.poetry.group.dev.dependencies]
pytest = "7.1.3"
pytest-cov = "4.0.0"
mypy = "0.982"
pytest-mypy = "0.10.0"
flake8 = "4.0.1"
pytest-flake8 = "1.1.1"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-rA --mypy --flake8 --cov-config=.coveragerc --cov=src --cov-branch --cov-fail-under=100 --cov-report=term --cov-report=html --verbose --verbose"
testpaths = [
    "src/odyssey_tests/version_tests",
]
python_files = [
    "__init__.py",
    "*_tests.py"
]
python_functions = [
    "test_*"
]

[tool.mypy]
strict = "True"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
